--- a/src/Movie.css
+++ b/src/Movie.css
@@ -1,8 +1,8 @@
-.Movies {  
+.movie {  
   margin: 30px;
 }
 
-.Movie{
+.movieRow{
   text-align: left;
   margin: 15px;
   background-color: lightgrey;
